--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main class="page cv-page">
         <section class="portfolio-block block-intro border-bottom" style="--bs-body-bg: #ffe58b;background: #ffed90;padding: 30px;">
-            <h1 style="padding-bottom: 20px;font-weight: bold;font-family: Roboto;">LÝ LỊCH NGHỀ NGHIỆP</h1><img src="https://baonguyen134.github.io/mycv/assets/img/avatars/logo.png" style="width: 150px;height: 150px;margin: -1px;margin-bottom: 20px;">
+            <h1 style="padding-bottom: 20px;font-weight: bold;font-family: Roboto;">LÝ LỊCH NGHỀ NGHIỆP</h1>
             <div class="container">
                 <div class="about-me">
                     <p style="color: var(--bs-gray-900);font-family: Roboto;--bs-body-color: #000000;">Xin chào! Tôi là <strong>Bảo, </strong>tôi đã làm việc trên 8 năm với các vai trò khác nhau trong ngành công nghệ thông tin, điện tử viễn thông, đồ họa và đào tạo.</p>
