--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>CV - My CV</title>
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <link rel="stylesheet" href="assets/css/Light-Contact-List.css">
+    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
 </head>
 
 <body>
     <main class="page cv-page">
-        <section class="portfolio-block block-intro border-bottom" style="--bs-body-bg: #ffe58b;background: #ffed90;padding: 30px;">
-            <h1 style="padding-bottom: 20px;font-weight: bold;font-family: Roboto;">LÝ LỊCH NGHỀ NGHIỆP</h1><img src="assets/img/avatars/logo.png" width="100px">
+        <section class="portfolio-block block-intro border-bottom" style="--bs-body-bg: #ffe58b;background: url(&quot;assets/img/desk.jpg&quot;), #ffed90;padding: 30px;">
+            <h1 class="text-light" style="padding-bottom: 20px;font-weight: bold;font-family: Roboto;--bs-body-color: #ffffff;">LÝ LỊCH NGHỀ NGHIỆP</h1><img src="assets/img/avatars/logo.png" width="100px">
             <div class="container">
                 <div class="about-me">
-                    <p style="color: var(--bs-gray-900);font-family: Roboto;--bs-body-color: #000000;margin-top: 20px;">Xin chào! Tôi là <strong>Bảo, </strong>tôi đã làm việc trên 6 năm với các vai trò khác nhau trong ngành công nghệ thông tin.</p>
+                    <p class="text-white" style="color: var(--bs-gray-900);font-family: Roboto;--bs-body-color: var(--bs-white);margin-top: 20px;">Xin chào! Tôi là <strong>Bảo, </strong>tôi đã làm việc trên 6 năm với các vai trò khác nhau trong ngành công nghệ thông tin.</p>
                 </div>
             </div>
         </section>
@@ -194,7 +200,7 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>Học lập trình HTML/CSS</h3>
+                                <h3>Học lập trình Front-end</h3>
                             </div>
                             <div class="col-md-6"><span class="period" style="font-size: 18px;color: var(--bs-red);">08/2016 - 12/2016</span></div>
                         </div>
@@ -226,27 +232,28 @@
                 </div>
                 <div class="hobbies group" style="color: var(--bs-blue);box-shadow: 0px 0px var(--bs-gray-800);">
                     <div class="heading">
-                        <h2 class="text-success" style="text-align: center;color: var(--bs-teal);font-family: Roboto;">CÔNG CỤ PHẦN MỀM</h2>
+                        <h2 class="text-success" style="text-align: center;color: var(--bs-teal);font-family: Roboto;">Kỹ Năng &amp; Công Cụ</h2>
                     </div>
-                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-right: 0;margin-left: 0;color: var(--bs-green);">PHỤC VỤ THIẾT KẾ UI/UX<br></p>
+                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-right: 0;margin-left: 0;color: var(--bs-green);">THIẾT KẾ UI/UX<br></p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">1. Wireframe: Balsamiq, Draw.io, Visio,&nbsp;FigJam.<br></p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">2. Mockup:&nbsp;Adobe illustrator, Adobe Photoshop.</p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">3. Prototype:&nbsp;Adobe XD, Figma, Lunacy, Axure RP, Framer, Bootstrap Studio.</p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">4. Infographic: EdrawMax, Indesign.</p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">5. Flowchart: Draw.io, Visio</p>
-                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">PHỤC VỤ LÀM TÀI LIỆU, BÁO CÁO, THUYẾT TRÌNH<br></p>
+                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">LÀM TÀI LIỆU, BÁO CÁO, THUYẾT TRÌNH<br></p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">1. Microsoft: Word, Excel, Powerpoint, PowerBI.</p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">2. Google: Mail, Docs, Sheets, Slides, Driver, Meet.</p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">3. Atlassian:&nbsp;Confluence</p>
-                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">PHỤC VỤ QUẢN LÝ CÔNG VIỆC<br></p>
+                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">QUẢN LÝ CÔNG VIỆC<br></p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">Jira Software, Microsoft Project,&nbsp;Redmine,&nbsp;Trello</p>
-                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">PHỤC VỤ LẬP TRÌNH<br></p>
+                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">LẬP TRÌNH<br></p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">Visual Studio Code, Android Studio, Visual Studio, MS SQL, Github</p>
-                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">PHỤC VỤ LÀM VIDEO, ANIMATION<br></p>
+                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">LÀM VIDEO, ANIMATION<br></p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">Camtasia, Canva, Fimora, Clipchamp, Moho</p>
-                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">PHỤC VỤ HỖ TRỢ, HƯỚNG DẪN<br></p>
+                    <p class="text-start text-success" style="font-family: Roboto;font-weight: bold;margin-top: 15px;margin-right: 0;margin-left: 0;">HỖ TRỢ, HƯỚNG DẪN<br></p>
                     <p class="text-start text-muted" style="font-family: Roboto;margin-right: 0;margin-left: 0;">Snagit, Utraview, Teamview, Skype, Zalo</p>
                 </div>
+                <section class="projects-horizontal"></section>
                 <div class="hobbies group" style="color: var(--bs-blue);box-shadow: 0px 0px var(--bs-gray-800);">
                     <div class="heading">
                         <h2 class="text-center" style="margin-bottom: 0px;font-family: Roboto;">SỞ Thích</h2>
