--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <main class="page cv-page">
-        <section class="portfolio-block block-intro border-bottom" style="--bs-body-bg: #ffe58b;background: url(&quot;assets/img/desk.jpg&quot;), #ffed90;padding: 30px;">
+        <section class="portfolio-block block-intro border-bottom" style="--bs-body-bg: #ffe58b;background: url(/assets/img/desk.jpg&quot;), #ffed90;padding: 30px;">
             <h1 class="text-light" style="padding-bottom: 20px;font-weight: bold;font-family: Roboto;--bs-body-color: #ffffff;">LÝ LỊCH NGHỀ NGHIỆP</h1><img src="assets/img/avatars/logo.png" width="100px">
             <div class="container">
                 <div class="about-me">
