--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>CV - My CV</title>
     <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/avatars/logo.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
@@ -21,7 +17,7 @@
 
 <body>
     <main class="page cv-page">
-        <section class="portfolio-block block-intro border-bottom" style="--bs-body-bg: #ffe58b;background: url(/assets/img/desk.jpg&quot;), #ffed90;padding: 30px;">
+        <section class="portfolio-block block-intro border-bottom" style="background: url(assets/img/desk.jpg), #ffed90;padding: 30px;">
             <h1 class="text-light" style="padding-bottom: 20px;font-weight: bold;font-family: Roboto;--bs-body-color: #ffffff;">LÝ LỊCH NGHỀ NGHIỆP</h1><img src="assets/img/avatars/logo.png" width="100px">
             <div class="container">
                 <div class="about-me">
